--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -24,6 +24,10 @@ jobs:
       with:
         node-version: ${{ matrix.node-version }}
         cache: 'npm'
+        cache-dependency-path: './backend/package-lock.json'
     - run: npm ci
-    - run: npm run build --if-present
+      working-directory: './backend'
     - run: npm run build
+      working-directory: './frontend'
+    - run: npm run start
+      working-directory: './backend'
