--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -11,6 +11,9 @@ jobs:
   build:
 
     runs-on: self-hosted
+    defaults:
+       run:
+         working-directory: ./backendv/
 
     strategy:
       matrix:
